# MobileSLAM

./: LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/robotic/slam/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/robotic/slam/: CalibrationActivity.kt  MenuActivity.kt  ResultsActivity.kt  SlamActivity.kt  SlamDataManager.kt  SlamGLRenderer.kt  SlamPreferences.kt  SplashActivity.kt
app/src/main/res/drawable/: glass_panel.xml  ic_launcher_background.xml  ic_slam_badge.xml  splash_background.xml  splash_logo_glow.xml  splash_progress_track.xml
app/src/main/res/layout/: activity_calibration.xml  activity_main.xml  activity_menu.xml  activity_results.xml  activity_splash.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/robotic/slam/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
